--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,7 @@
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.38-bin.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="lib/jfxrt.jar"/>
+	<classpathentry kind="lib" path="lib/jboss-marshalling-1.3.0.CR9.jar"/>
+	<classpathentry kind="lib" path="lib/jboss-marshalling-serial-1.3.0.CR9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
