完成数据库参数修改接口

--- a/config.properties
+++ b/config.properties
@@ -1,8 +1,10 @@
-JDBC_USER=root
-JDBC_PASSWORD=ldyy
-JDBC_PORT = 3306
+#Mon Apr 25 23:20:38 CST 2016
+#Mon Apr 25 23:20:38 CST 2016
+SERVER_PORT=8080
 JDBC_DATABASE=serverdb
-JDBC_SERVERNAME = 127.0.0.1
-SERVER_IP = 127.0.0.1
-SERVER_PORT = 8080
-SERVER_ID = TT
+JDBC_SERVERNAME=127.0.0.1
+JDBC_USER=root
+JDBC_PORT=3306
+SERVER_IP=127.0.0.1
+SERVER_ID=TT
+JDBC_PASSWORD=ldyy
