--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="lib" path="lib/netty-all-5.0.0.Alpha2.jar" sourcepath="E:/毕设/netty/netty-all-5.0.0.Alpha2-sources.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.38-bin.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="lib/jfxrt.jar"/>
+	<classpathentry kind="lib" path="lib/jfxrt.jar" sourcepath="F:/Program Files (x86)/Java/jdk1.8.0_65/javafx-src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
