--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="lib/netty-all-5.0.0.Alpha2.jar" sourcepath="E:/毕设/netty/netty-all-5.0.0.Alpha2-sources.jar"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.38-bin.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.17.jar"/>
 	<classpathentry kind="lib" path="lib/jfxrt.jar" sourcepath="F:/Program Files (x86)/Java/jdk1.8.0_65/javafx-src.zip"/>
+	<classpathentry kind="lib" path="lib/jfxtras-labs-samples-8.0-r5-SNAPSHOT-shadow.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
